<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.0</version>
        <relativePath/>
    </parent>

    <groupId>ru.gold.ordance</groupId>
    <artifactId>rgo-tt-task</artifactId>
    <version>23.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <modules>
        <module>rgo-tt-task-boot</module>
        <module>rgo-tt-task-persistence</module>
        <module>rgo-tt-task-service</module>
        <module>rgo-tt-task-rest-api</module>
        <module>rgo-tt-task-db-migration</module>
    </modules>

    <properties>
        <java.version>17</java.version>

        <rgo-tt-common.version>23.0.0-SNAPSHOT</rgo-tt-common.version>

        <armeria.version>1.25.2</armeria.version>
        <guava.version>32.1.2-jre</guava.version>
        <commons-lang3.version>3.13.0</commons-lang3.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- self modules -->
            <dependency>
                <groupId>ru.gold.ordance</groupId>
                <artifactId>rgo-tt-task-persistence</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.gold.ordance</groupId>
                <artifactId>rgo-tt-task-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.gold.ordance</groupId>
                <artifactId>rgo-tt-task-rest-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- self modules -->

            <!-- external modules -->
            <dependency>
                <groupId>ru.gold.ordance</groupId>
                <artifactId>rgo-tt-common-rest-api</artifactId>
                <version>${rgo-tt-common.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.gold.ordance</groupId>
                <artifactId>rgo-tt-common-validator</artifactId>
                <version>${rgo-tt-common.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.gold.ordance</groupId>
                <artifactId>rgo-tt-common-exceptions</artifactId>
                <version>${rgo-tt-common.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.gold.ordance</groupId>
                <artifactId>rgo-tt-common-persistence</artifactId>
                <version>${rgo-tt-common.version}</version>
            </dependency>
            <!-- external modules -->

            <!-- armeria -->
            <dependency>
                <groupId>com.linecorp.armeria</groupId>
                <artifactId>armeria-spring-boot3-starter</artifactId>
                <version>${armeria.version}</version>
            </dependency>
            <!-- armeria -->

            <!-- utils -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <!-- utils -->
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>